# c-pharmacy-management

./: README.md
src/: CMakeLists.txt  Pharmacy.c  Pharmacy.h  main.c
src/controllers/: ClienteController.c  ClienteController.h  FornecedorController.c  FornecedorController.h  NotaFiscalController.c  NotaFiscalController.h  ProdutoController.c  ProdutoController.h  VendedorController.c  VendedorController.h
src/models/: Cliente.h  Fornecedor.h  ItemCompra.h  ItemNotaFiscal.h  NotaCompra.h  NotaFiscal.h  NotaFiscalItem.h  Produto.h  Vendedor.h
src/utils/: Utils.c  Utils.h
src/view/: Menu.c  Menu.h
